--- a/src/components/contact/Contact.module.css
+++ b/src/components/contact/Contact.module.css
@@ -2,7 +2,8 @@
   display: flex;
   justify-content: space-between;
   padding: 15px 12px;
-  border: 1px solid gray;
+  background: var(--cl-card-background);
+  border: 1px solid var(--cl-mid-gray);
   border-radius: 6px;
 }
 
@@ -24,15 +25,13 @@
 
 .deleteBtn {
   padding: 4px 8px;
-  background-color: antiquewhite;
-  border: 1px solid gray;
+  background-color: var(--cl-red-300);
+  color: var(--cl-white);
   border-radius: 6px;
   cursor: pointer;
   align-self: center;
 }
 
 .deleteBtn:hover {
-  background-color: lightcoral;
-  color: white;
-  border: 1px solid lightcoral;
+  background-color: var(--cl-red-400);
 }
