--- a/src/components/search-box/SearchBox.module.css
+++ b/src/components/search-box/SearchBox.module.css
@@ -7,11 +7,11 @@
   width: 100%;
   max-width: 350px;
   padding: 8px 10px;
-  border: 1px solid gray;
+  border: 1px solid var(--cl-mid-gray);
   border-radius: 6px;
 }
 
 .searchInput:focus {
   outline: none;
-  border-color: blue;
+  border-color: var(--cl-accent-darken);
 }
