--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,5 @@
+@import './variables.css';
+
 *,
 *::before,
 *::after {
@@ -49,6 +51,7 @@ button {
   cursor: pointer;
   background: none;
   border: none;
+  outline: none;
 }
 
 article,
