--- a/src/components/login-form/LoginForm.module.css
+++ b/src/components/login-form/LoginForm.module.css
@@ -22,7 +22,7 @@
   border-color: var(--cl-accent-darken);
 }
 
-.addBtn {
+.loginBtn {
   margin-top: 10px;
   padding: 4px 8px;
   background-color: var(--cl-blue);
@@ -33,7 +33,7 @@
   transition: var(--trns-ease);
 }
 
-.addBtn:hover {
+.loginBtn:hover {
   background-color: var(--cl-light-blue);
 }
 
