--- a/src/components/main-layout/MainLayout.module.css
+++ b/src/components/main-layout/MainLayout.module.css
@@ -1,20 +1,26 @@
-.container {
+.layout {
   min-width: 320px;
   max-width: 375px;
   min-height: 100vh;
   margin: 0 auto;
-  padding: 20px;
+}
+
+.container {
+  padding: 30px;
 }
 
 @media only screen and (min-width: 768px) {
-  .container {
+  .layout {
     max-width: 768px;
-    padding: 32px;
+  }
+
+  .container {
+    padding: 30px 45px;
   }
 }
 
 @media only screen and (min-width: 1440px) {
-  .container {
+  .layout {
     max-width: 1376px;
   }
 }
