--- a/src/components/register-form/RegisterForm.module.css
+++ b/src/components/register-form/RegisterForm.module.css
@@ -22,7 +22,7 @@
   border-color: var(--cl-accent-darken);
 }
 
-.addBtn {
+.registerBtn {
   margin-top: 10px;
   padding: 4px 8px;
   background-color: var(--cl-blue);
@@ -33,7 +33,7 @@
   transition: var(--trns-ease);
 }
 
-.addBtn:hover {
+.registerBtn:hover {
   background-color: var(--cl-light-blue);
 }
 
