--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,6 +1,6 @@
 :root {
   /* Colors */
-  --cl-background: #f5f5f5;
+  --cl-card-background: #f5f5f5;
   --cl-light-blue: #416c97;
   --cl-blue: #385b7e;
   --cl-gray: #2c2c2c;
@@ -18,7 +18,7 @@
   --shadow-layout:
     -8px 0 15px -3px rgba(0, 0, 0, 0.1), 8px 0 15px -3px rgba(0, 0, 0, 0.1);
   --shadow-header: 0px -2px 13px 3px rgba(66, 104, 142, 0.8);
-  --shadow-card: 0 2px 8px rgba(0, 0, 0, 0.4);
+  --shadow-card: 0 2px 8px rgba(0, 0, 0, 0.2);
 
   /* Transitions */
   --trns-ease: all 0.3s ease;
